improved button styles and overlap issues
improved button styling on homepage (transparent, ooh). Also fixed
responsive scaling clipping issues with main content and navigation bar.
Nav image now collapses into smaller version on tablet / mobile size.
Going to experiment with single button setup next.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,41 +1,62 @@
+@charset 'UTF-8';
+
 /* NAV BAR
 **************************************** */
-.top-bar, 
-.top-bar ul, 
+.top-bar,
+.top-bar ul,
 .top-bar ul .has-form,
 .top-bar .has-dropdown,
 .top-bar-section ul li > a,
-.top-bar-section li a:not(.button) {
-	background: #F36E21;	
+.top-bar-section li a:not( .button ) {
+  background: #F36E21;
 }
 
 .top-bar{
-	height: 56px;
+  height: 56px;
 }
 .top-bar .name{
-	height: auto;
+  height: auto;
 }
 
 .top-bar .name h1{
-	line-height: 1.4;
+  line-height: 1.4;
 }
 
-.top-bar .title-area .name h1 a:before {
+.top-bar .title-area .name a:before {
     content: "";
-    background-image: url('../img/banners/rit-text-header.png');
+    background-image: url("../img/banners/rit-text-header.png");
     background-repeat: no-repeat;
     display: inline-block;
     width: 375px;
-	height: 51px;
+    height: 51px;
     margin-right: 10px;
     position: relative;
 }
 
+
+
+/* center stuffs */
 .home-blurb {
     text-align: justify;
 }
 .home-blurb a {
     margin: 0 auto;
+}
+
+.home-blurb-title {
+  text-align: center;
+  color: white;
+}
+
+.home-button {
+  background-color: rgba(0,0,0,0.65);
+  outline: 3px solid #F36E21;
+  text-transform: uppercase;
+}
+
+.home-button:hover{
+  background-color: #F36E21;
+  
 }
 
 body {
@@ -69,7 +90,7 @@ body {
 **************************************** */
 footer {
     width: 100%; 
-    height: 150px; 
+    height: 15%; 
     position: fixed; 
     bottom: 0;  
     background: #333333;
@@ -79,10 +100,17 @@ footer {
 .sub-nav{
   background: #333333; 
 }
+.sub-nav a{
+
+}
+
+a:hover{
+  color: orange;
+}
 
 .footer-container{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 3%;
 }
 
 .footer-ul {
@@ -100,9 +128,32 @@ footer {
 
 /* center box content */
 .center-box {
-    /*margin-top: 10%;*/
     display: table-cell;
     vertical-align: middle;
-    margin-top: 150px;
+    margin-top: 5%;
     
+}
+
+@media all and (max-width: 750px) {
+  .center-box {
+    margin-top: 7%;
+  }
+
+  @media all and (max-width: 640px) {
+    .home-button-container {
+      margin-bottom: 25px;
+    }
+  }
+
+  /* resize the header image to prevent overlap. */
+  .top-bar .title-area .name a:before {
+      content: "";
+      background-image: url("../img/banners/rit-text-header-small.png");
+      background-repeat: no-repeat;
+      display: inline-block;
+      width: 130px;
+      height: 51px;
+      margin-right: 10px;
+      position: relative;
+  }
 }
